--- a/index.html
+++ b/index.html
@@ -8,37 +8,72 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="section1">
-        <div class="header">
-            <h1>
-                Header Logo
-            </h1>
-            <ul>
-                <li><a href="google.com">Header link one</a></li>
-                <li><a href="google.com">Header link two</a></li>
-                <li><a href="google.com">Header link three</a></li>
-            </ul>
+    <div class="content">
+        <div class="section1">
+            <div class="header">
+                <h1>
+                    Header Logo
+                </h1>
+                <ul>
+                    <li><a href="google.com">Header link one</a></li>
+                    <li><a href="google.com">Header link two</a></li>
+                    <li><a href="google.com">Header link three</a></li>
+                </ul>
+            </div>
+            <div class="hero">
+                <div class="left-hero">
+                    <h2>
+                        This website is<br> awesome
+                    </h2>
+                    <p>
+                        This website has some subtext that goes here under
+                        the <br>main title. It's a smaller font and the color is
+                        lower <br>contrast
+                    </p>
+                    <button>
+                        Sign up
+                    </button>
+                </div>
+                <div class="right-hero">
+                    <img src="" alt="This is a placeholder for an image">
+                </div>
+            </div>
         </div>
-        <div class="hero">
-            <div class="left-hero">
+        <div class="section2">
+            Section2placeholder
+        </div>
+        <div class="section3">
+            <p class="quote">
+               This is an inspiring quote, or a 
+               testimonial from a<br>customer.
+               Maybe it's just filling up 
+               space, or maybe<br>people will actually read it.
+               Who knows? All I know<br>is that it looks nice.
+            </p>
+            <p class="signature">
+                -Thor, God of Thunder
+            </p>
+        </div>
+        <div class="section4">
+            <div class="left">
                 <h2>
-                    This website is<br> awesome
+                    Call to Action! It's time!
                 </h2>
                 <p>
-                    This website has some subtext that goes here under
-                    the <br>main title. It's a smaller font and the color is
-                    lower <br>contrast
+                    Sign up for our products by clicking that button right 
+                    over there!
                 </p>
-                <button>
-                    Sign up
-                </button>
             </div>
-            <div class="right-hero">
-                <img src="" alt="This is a placeholder for an image">
+            <div class="right">
+                <button>
+                    Sign Up
+                </button>
             </div>
         </div>
     </div>
-    
+    <footer>
+            Copyright &copy; The Odin Project 2021
+    </footer>
 </body>
 </html>
 
