--- a/index.html
+++ b/index.html
@@ -40,7 +40,35 @@
             </div>
         </div>
         <div class="section2">
-            Section2placeholder
+            <div class="title">
+                Some random information.
+            </div>
+            <div class="container">
+                <div class="image">
+                    <div class="info">
+                        <img src="" alt="">
+                        <div class="text">This is some subtext<br> under an illustration<br> or image</div>
+                    </div>
+                </div>
+                <div class="image">
+                    <div class="info">
+                        <img src="" alt="">
+                        <div class="text">This is some subtext<br> under an illustration<br> or image</div>
+                    </div>
+                </div>
+                <div class="image">
+                    <div class="info">
+                        <img src="" alt="">
+                        <div class="text">This is some subtext<br> under an illustration<br> or image</div>
+                    </div>
+                </div>
+                <div class="image">
+                    <div class="info">
+                        <img src="" alt="">
+                        <div class="text">This is some subtext<br> under an illustration<br> or image</div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="section3">
             <p class="quote">
